--- a/HW3/InventoryManagementSystem2/InventoryManagementSystem2/InventoryManagementSystem2.vcxproj
+++ b/HW3/InventoryManagementSystem2/InventoryManagementSystem2/InventoryManagementSystem2.vcxproj
@@ -124,6 +124,8 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
+      <ScanSourceForModuleDependencies>true</ScanSourceForModuleDependencies>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
